# tanimachi

./: README.md  pyproject.toml
src/tanimachi/schemas/: wappalyzer.py
tests/: test_requires.py
tests/fixtures/fingerprints/: quasar.json
tests/fixtures/har/: quasar.dev.har
