[project]
name = "tanimachi"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru~=0.7",
    "pydantic~=2.9",
    "returns>=0.23.0",
    "selectolax~=0.3",
]

[build-system]
requires = ["hatchling==1.25.0", "uv-dynamic-versioning==0.2.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-pretty>=1.2.0",
    "pytest-randomly>=3.16.0",
    "pytest-github-actions-annotate-failures>=0.2.0",
    "gitpython>=3.1.43",
    "lefthook>=1.8.2",
    "build>=1.2.2",
    "twine>=5.1.1",
]

[tool.ruff.lint]
select = [
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C",     # flake8-comprehensions
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "PT",    # flake8-pytest-style
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "UP",    # pyupgrade
    "UP007", # non-pep604-annotation
    "W",     # pycodestyle warnings
]
ignore = ["E501"]
